--- a/index.html
+++ b/index.html
@@ -1394,26 +1394,12 @@ if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
         }
         
         function clearAllRecords() {
-    if (!confirm("ลบรายการทั้งหมดและเริ่มต้นใหม่?")) return;
-
-    // ล้างข้อมูลในหน่วยความจำ
-    records = [];
-
-    // ล้างเฉพาะข้อมูลที่เกี่ยวกับรายการ/ลำดับ (ไม่ล้าง key ของแท็ป)
-    localStorage.removeItem("records");
-    localStorage.removeItem("runningNo");
-    localStorage.removeItem("seq");
-    localStorage.removeItem("recordNo");
-    localStorage.removeItem("counter");
-
-    // รีเฟรชหน้าจอ
-    renderList();
-
-    const badge = document.getElementById('badgeCount');
-    if (badge) {
-        badge.innerText = 0;
-        badge.classList.add('hidden');
-    }
+            if(!confirm("ลบรายการทั้งหมด?")) return;
+            records = [];
+            renderList();
+            document.getElementById('badgeCount').innerText = 0;
+            document.getElementById('badgeCount').classList.add('hidden');
+        }
 
         function formatFixedWidth(text, length, padType, align) {
              let str = String(text || "");
